overflowX fixed

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -7,7 +7,7 @@
   font-family: "Raleway", sans-serif;
 }
 body {
-  overflow: hidden;
+ overflow-x: hidden;
 }
 .main {
   //   background-color: red;
